--- a/basicos.html
+++ b/basicos.html
@@ -66,8 +66,9 @@
 
    console.log(objeto);
    console.log(colores);
-   */
-   //Cadenas de Texto aka Strings
+*/
+/*
+   //Clase 5 Cadenas de Texto aka Strings
    let nombre = "Set";
    let apellido = "Reyes";
    let saludo = new String("Hola Mundo");
@@ -84,6 +85,43 @@
        nombre.trim(),
        nombre.split(","),
    )
+*/
+
+   //clase 6 Caracteristicas de las cadenas de texto 
+   let nombre = "Set";
+   let apellido = "Reyes";
+
+   //Concatencacion
+   let saludo = "Hola mi nombre es " + nombre + " " + apellido + ".";
+   console.log(saludo);
+
+   // interpolacion de variables
+   //Template String
+   let saludo2 = `Hola mi nombre es ${nombre} ${apellido}.`;
+   console.log(saludo2);
+
+   let ul = "<ul><li>Primavera</li><li>Verano</li><li>Otoño</li><li>Invierno</li></ul>";
+
+   console.log(ul);
+
+   let ul2 = `<ul>
+      <li>Primavera</li>
+      <li>Verano</li>
+      <li>Otoño</li>
+      <li>Invierno</li>
+  </ul>`;
+    console.log(ul2);
+
+let ul3 = "<ul>";
+    ul3 +="<li>Primavera</li>";
+    ul3 +="<li>Verano</li>";
+    ul3 +="<li>Otoño</li>";
+    ul3 +="<li>Invierno</li>";
+    ul3 +="</ul>";
+console.log(ul3);
+
+
+
   </script>
  </body>
 
