--- a/basicos.html
+++ b/basicos.html
@@ -87,6 +87,7 @@
    )
 */
 
+/*
    //clase 6 Caracteristicas de las cadenas de texto 
    let nombre = "Set";
    let apellido = "Reyes";
@@ -119,6 +120,22 @@ let ul3 = "<ul>";
     ul3 +="<li>Invierno</li>";
     ul3 +="</ul>";
 console.log(ul3);
+*/
+
+
+//Clase 7 Numeros
+
+let a = 2;
+let b = new Number(1);
+let c = 7.19;
+let d = "5.6";
+
+console.log(a,b);
+console.log(c.toFixed(1));
+console.log(c.toFixed(5));
+console.log(parseInt(c));
+console.log(typeof c, typeof d);
+
 
 
 
