--- a/basicos.html
+++ b/basicos.html
@@ -137,6 +137,19 @@ console.log(parseInt(c));
 console.log(typeof c, typeof d);
 
 
+//valores booleanos o truthy
+
+let verdadero = true;
+let falso = false;
+let v = Boolean(true);
+let f = Boolean(false);
+
+console.log(verdadero, falso, v, f);
+console.log(typeof verdadero, typeof falso);
+
+console.log(Boolean(0));
+console.log(Boolean(-7));
+console.log(Boolean(""));
 
 
   </script>
