--- a/basicos.html
+++ b/basicos.html
@@ -120,7 +120,7 @@ let ul3 = "<ul>";
     ul3 +="<li>Invierno</li>";
     ul3 +="</ul>";
 console.log(ul3);
-*/
+
 
 
 //Clase 7 Numeros
@@ -150,6 +150,22 @@ console.log(typeof verdadero, typeof falso);
 console.log(Boolean(0));
 console.log(Boolean(-7));
 console.log(Boolean(""));
+*/
+
+ 
+//Clase 9 variables indefinidas
+
+let indefinida;
+console.log(indefinida);
+
+let nulo = null;
+console.log(nulo);
+
+//NaN - Not a Number
+let noEsUnNumero = "hola" * 3.7;
+console.log(noEsUnNumero);
+
+
 
 
   </script>
