--- a/Basicos/ObjetoMath.html
+++ b/Basicos/ObjetoMath.html
@@ -49,7 +49,7 @@
 
      console.log(false && "Valor de la derecha"); */
 
- console.log(window);
+/*  console.log(window);
 
 //  window.alert("Hola esto es una alerta");
 //  window.confirm("Hola esto es una confirmacion");
@@ -60,14 +60,30 @@
  
  console.log(alerta);
  console.log(confirmacion);
- console.log(aviso);
+ console.log(aviso); */
 
  
+//Expresiones Regulares -- secuencia de caracteresque forman un patron de busqueda y que es utilizado en labusqueda de cadenas de texto
 
+/*  let cadena = "lorem ipsum";
+ let expReg = new RegExp("lorem","ig");
+ let expReg2 = /lorem/;
 
+ console.log(expReg.test(cadena));
 
+ console.log(expReg2.exec(cadena)); */
 
+//Funciones anonimas Autoejecutables
+/*  (function(){
+   console.log("Mi primer IFE");
+ })();
 
+ (function(d,w,c){
+   console.log("Mi segunda IFE");
+   console.log(d);
+   console.log(w);
+   c.log("Esto es un console.log");
+ })(document, window, console); */
 
 
  </script>
