--- a/Ejercicios/basicos-ejercicios.html
+++ b/Ejercicios/basicos-ejercicios.html
@@ -42,11 +42,92 @@
   miFuncion2("Hola que tal"," ");
   miFuncion3("Hola que tal", 5); */
 
+/*   const invertiCadena = (cadena = "") => 
+   (!cadena)
+    ? console.warn("no ingresaste cadena")
+    : console.info(cadena.split('').reverse().join(''));
 
-  function miFuncion(palabra){
-   console.log(palabra.reverse);
+  invertiCadena();
+  invertiCadena("Hola Mundo");
+
+
+
+  const textoEnCadena = (cadena = "", texto = "") =>{
+   if(!cadena) return console.warn("No ingresasste el texto largo");
+
+   if(!texto) return console.warn("No ingresaste la palabra a evaluar");
+
+   let i = 0,
+    contador = 0 ;
+   while ( i !== -1) {
+    i = cadena.indexOf(texto, i)
+    if( i !== -1){
+     i++;
+     contador++;
+    }
+   }
+   return console.info(`La palabra ${texto} se repite ${contador} veces`);
   }
-  miFuncion("Hola Mundo");
+
+  textoEnCadena("hola mundo adios mundo", "mundo");
+
+  const palindromo = (palabra = "") => {
+   if (!palabra) return console.warn("No ingresasste una palabra o frase");
+
+   palabra = palabra.toLowerCase();
+   let alReves = palabra.split('').reverse().join('');
+
+   return (palabra === alReves)
+    ? console.info(`Si es palindromo. Palabra original ${palabra}. Palabra al reves ${alReves}`)
+    : console.info(`No es palindromo. Palabra original ${palabra}. Palabra al reves ${alReves}`)
+  }
+
+  palindromo("Hola mundo");
+  palindromo("Salas")
+
+  const eliminarCaracteres = (texto = "", patron = "") =>
+   (!texto)
+    ? console.warn("No ingresaste un texto")
+    :(!patron)
+     ? console.warn("No ingresaste un patron de caracteres")
+     : console.info(texto.replace(new RegExp(patron, "ig"), ""));
+  
+  eliminarCaracteres("xyz1, xyz2, xyz3", "[a-z]");
+ */
+
+
+
+// 9) Programa una función que obtenga un numero aleatorio entre 501 y 600.
+
+/*  const aleatorio = () => console.info(Math.round(Math.random() * 100)+500);
+
+ aleatorio(); */
+
+// 10) Programa una función que reciba un número y evalúe si es capicúa o no (que se lee igual en un sentido que en otro), pe. miFuncion(2002) devolverá true.
+
+/* const capicua = (numero = 0) => {
+ if(!numero) return console.warn("No ingresaste un numero");
+
+ if(typeof numero !== "number") return console.error(`El valor ${numero} ingresado, no es un numero `);
+
+ numero = numero.toString();
+ let alReves = numero.split("").reverse().join("");
+
+ return (numero === alReves)
+  ? console.info(`Si es capicua, Numero original ${numero}, Numero al reves ${alReves}`)
+  : console.info(`No es capicua, Numero original ${numero}, Numero al reves ${alReves}`)
+}
+
+capicua();
+capicua("19");
+capicua(2000); */
+
+// 11) Programa una función que calcule el factorial de un número (El factorial de un entero positivo n, se define como el producto de todos los números enteros positivos desde 1 hasta n), pe. miFuncion(5) devolverá 120.
+
+
+
+
+
 
 
 
