--- a/Ejercicios/basicos-ejercicios.html
+++ b/Ejercicios/basicos-ejercicios.html
@@ -124,7 +124,25 @@ capicua(2000); */
 
 // 11) Programa una función que calcule el factorial de un número (El factorial de un entero positivo n, se define como el producto de todos los números enteros positivos desde 1 hasta n), pe. miFuncion(5) devolverá 120.
 
+ const factorial = (numero = undefined) => {
+  if (numero === undefined) return console.waen("No ingresaste un numero");
 
+  if (typeof numero !== "number") return console.error(`El valor ${numero} ingresado, NO es un numero`);
+
+  if (numero === 0) return console.error("El numero no puede ser cero");
+
+  if (Math.sign(numero) === -1) return console.error("El numero no pude ser negativo");
+
+  let factorial = 1;
+
+  for (let i = numero; i > 1 ; i--) {
+   factorial *= i;
+  }
+
+  return console.info(`El factorial de ${numero} es ${factorial}`);
+ }
+
+ factorial(8);
 
 
 
