--- a/Ejercicios/basicos-ejercicios.html
+++ b/Ejercicios/basicos-ejercicios.html
@@ -124,7 +124,7 @@ capicua(2000); */
 
 // 11) Programa una función que calcule el factorial de un número (El factorial de un entero positivo n, se define como el producto de todos los números enteros positivos desde 1 hasta n), pe. miFuncion(5) devolverá 120.
 
- const factorial = (numero = undefined) => {
+/*  const factorial = (numero = undefined) => {
   if (numero === undefined) return console.waen("No ingresaste un numero");
 
   if (typeof numero !== "number") return console.error(`El valor ${numero} ingresado, NO es un numero`);
@@ -143,8 +143,38 @@ capicua(2000); */
  }
 
  factorial(8);
+  */
 
+// 12) Programa una función que determine si un número es primo (aquel que solo es divisible por sí mismo y 1) o no, pe. miFuncion(7) devolverá true.
 
+// 13) Programa una función que determine si un número es par o impar, pe. miFuncion(29) devolverá Impar.
+// 14) Programa una función para convertir grados Celsius a Fahrenheit y viceversa, pe. miFuncion(0,"C") devolverá 32°F.
+
+  const numeroPrimo = (numero = undefined) => {
+   if (numero === undefined) return console.waen("No ingresaste un numero");
+
+  if (typeof numero !== "number") return console.error(`El valor ${numero} ingresado, NO es un numero`);
+
+  if (numero === 0) return console.error("El numero no puede ser cero");
+
+  if (numero === 1) return console.error("El numero no puede ser uno");
+
+  if (Math.sign(numero) === -1) return console.error("El numero no pude ser negativo");
+   
+  let divisible = false;
+
+  for (let i = 2; i < numero ; i++) {
+   if ((numero%i) === 0) {
+    divisible = true;
+    break;    
+   }
+  }
+  return (divisible)
+   ? console.log(`El numero ${numero}, No es primo`)
+   : console.log(`El numero ${numero}, Si es primo`);
+ }
+
+ numeroPrimo(19);
 
 
 
