--- a/Ejercicios/basicos-ejercicios.html
+++ b/Ejercicios/basicos-ejercicios.html
@@ -147,9 +147,7 @@ capicua(2000); */
 
 // 12) Programa una función que determine si un número es primo (aquel que solo es divisible por sí mismo y 1) o no, pe. miFuncion(7) devolverá true.
 
-// 13) Programa una función que determine si un número es par o impar, pe. miFuncion(29) devolverá Impar.
-// 14) Programa una función para convertir grados Celsius a Fahrenheit y viceversa, pe. miFuncion(0,"C") devolverá 32°F.
-
+/* 
   const numeroPrimo = (numero = undefined) => {
    if (numero === undefined) return console.waen("No ingresaste un numero");
 
@@ -175,8 +173,44 @@ capicua(2000); */
  }
 
  numeroPrimo(19);
+ */
+
+// 13) Programa una función que determine si un número es par o impar, pe. miFuncion(29) devolverá Impar.
+
+/* const numeroParImpar = (numero = undefined) => {
+ if(numero === undefined) return console.warn("No ingresaste un numero");
+ if(typeof numero !== "number") return console.error(`El valor ${numero} ingresado no es un numero`);
+
+ return ((numero%2) === 0)
+  ? console.info(`El numero ${numero} es Par`)
+  : console.info(`El numero ${numero} es Impar`)
+}
+
+numeroParImpar();
+numeroParImpar("23");
+numeroParImpar(-398);
+numeroParImpar(19); */
+
+// 14) Programa una función para convertir grados Celsius a Fahrenheit y viceversa, pe. miFuncion(0,"C") devolverá 32°F.
+
+const convertirGrados = (grados = undefined, unidad = undefined) => {
+ if(grados === undefined) return console.warn("No ingresaste grados a convertir");
+ if(typeof grados !== "number") return console.error(`El valor ${grados} ingresado no es un numero`);
+ if(unidad === undefined) return console.error(`No ingresaste el tipo de grado a convertir`);
+ if(typeof unidad !== "string") return console.error(`El valor ${unidad} ingresado no es una cadena de texto`);
+
+ if(!/C|F/.test(unidad)) return console.warn(`El valor ingresado no es reconocido`);
+
+ if(unidad ==="C"){
+  return console.info(`${grados}°C = ${Math.round((grados *(9/5)) + 32)}°F`);
+ }else if (unidad === "F") {
+ return console.info(`${grados}°F = ${Math.round(((grados-32) *(5/9)))}°C`)
+ }
 
 
+}
+
+convertirGrados(32,"F");
 
 
 
