--- a/Ejercicios/basicos-ejercicios.html
+++ b/Ejercicios/basicos-ejercicios.html
@@ -349,11 +349,67 @@ const validarEmail = (email = "") =>{
 
 
 // 21) Programa una función que dado un array numérico devuelve otro array con los números elevados al cuadrado, pe. mi_funcion([1, 4, 5]) devolverá [1, 16, 25].
+
+const devolverCuadrados =(arr = undefined) =>{
+ if(arr === undefined) return console.warn("No ingresaste un arreglo de numeros");
+
+ if(!(arr instanceof Array)) return console.error("El valor que ingresaste no es un arreglo");
+
+ if(arr.length === 0) return console.error("El arreglo esta vacio");
+
+ for (let num of arr) {
+  if(typeof num !== "number") return console.error(`El valor ${num} ingresado no es un numero`);  
+ }
+
+ const newArr = arr.map(el => el*el);
+
+ return console.info(`Arreglo original ${arr}, \nArreglo elevado al cuadrado: ${newArr}`);
+}
+
+//devolverCuadrados([1, 4, 8]);
+
 // 22) Programa una función que dado un array devuelva el número mas alto y el más bajo de dicho array, pe. miFuncion([1, 4, 5, 99, -60]) devolverá [99, -60].
+
+const arrayMinMax = (arr = undefined) => {
+ if(arr === undefined) return console.warn("No ingresaste un arreglo de numeros");
+
+ if(!(arr instanceof Array)) return console.error("El valor que ingresaste no es un arreglo");
+
+ if(arr.length === 0) return console.error("El arreglo esta vacio");
+
+ for (let num of arr) {
+  if(typeof num !== "number") return console.error(`El valor ${num} ingresado no es un numero`);  
+ }
+ return console.info(`Arreglo original: ${arr}\nValor mayor: ${Math.max(...arr)}\n Valor menor: ${Math.min(...arr)}`);
+}
+
+//arrayMinMax([1, 4, 5, 99, -60]);
+
 // 23) Programa una función que dado un array de números devuelva un objeto con 2 arreglos en el primero almacena los números pares y en el segundo los impares, pe. miFuncion([1,2,3,4,5,6,7,8,9,0]) devolverá {pares: [2,4,6,8,0], impares: [1,3,5,7,9]}.
 
+const separarParesImpares = (arr = undefined) => {
+ if(arr === undefined) return console.warn("No ingresaste un arreglo de numeros");
+
+ if(!(arr instanceof Array)) return console.error("El valor que ingresaste no es un arreglo");
+
+ if(arr.length === 0) return console.error("El arreglo esta vacio");
+
+ for (let num of arr) {
+  if(typeof num !== "number") return console.error(`El valor ${num} ingresado no es un numero`);  
+ }
+
+ return console.info({
+  pares: arr.filter(num => num%2 === 0),
+  impares: arr.filter(num => num%2 === 1)
+ });
+}
+
+//separarParesImpares([1,2,3,4,5,6,7,8,9,0]);
+// 24) Programa una función que dado un arreglo de números devuelva un objeto con dos arreglos, el primero tendrá los numeros ordenados en forma ascendente y el segundo de forma descendiente, pe. miFuncion([7, 5,7,8,6]) devolverá { asc: [5,6,7,7,8], desc: [8,7,7,6,5] }.
 
 
+// 25) Programa una función que dado un arreglo de elementos, elimine los duplicados, pe. miFuncion(["x", 10, "x", 2, "10", 10, true, true]) devolverá ["x", 10, 2, "10", true].
+// 26) Programa una función que dado un arreglo de números obtenga el promedio, pe. promedio([9,8,7,6,5,4,3,2,1,0]) devolverá 4.5.
  </script>
 </body>
 </html>
