--- a/Ejercicios/basicos-ejercicios.html
+++ b/Ejercicios/basicos-ejercicios.html
@@ -407,9 +407,111 @@ const separarParesImpares = (arr = undefined) => {
 //separarParesImpares([1,2,3,4,5,6,7,8,9,0]);
 // 24) Programa una función que dado un arreglo de números devuelva un objeto con dos arreglos, el primero tendrá los numeros ordenados en forma ascendente y el segundo de forma descendiente, pe. miFuncion([7, 5,7,8,6]) devolverá { asc: [5,6,7,7,8], desc: [8,7,7,6,5] }.
 
+const ordenarArreglo = (arr = undefined) =>{
+ if(arr === undefined) return console.warn("No ingresaste un arreglo de numeros");
+
+ if(!(arr instanceof Array)) return console.error("El valor que ingresaste no es un arreglo");
+
+ if(arr.length === 0) return console.error("El arreglo esta vacio");
+
+ for (let num of arr) {
+  if(typeof num !== "number") return console.error(`El valor ${num} ingresado no es un numero`);  
+ }
+
+ return console.log({
+  arr: arr,
+  asc: arr.map(el => el).sort(),
+  desc: arr.map(el => el).sort().reverse()
+ });
+}
+
+//ordenarArreglo([7, 5,7,8,6]);
 
 // 25) Programa una función que dado un arreglo de elementos, elimine los duplicados, pe. miFuncion(["x", 10, "x", 2, "10", 10, true, true]) devolverá ["x", 10, 2, "10", true].
+
+const quitarDuplicados = (arr = undefined) => {
+ if(arr === undefined) return console.warn("No ingresaste un arreglo de numeros");
+
+ if(!(arr instanceof Array)) return console.error("El valor que ingresaste no es un arreglo");
+
+ if(arr.length === 0) return console.error("El arreglo esta vacio");
+
+ if(arr.length === 1) return console.warn("El arreglo debe tener al menos 2 elementos")
+
+
+/*  return console.info({
+  original: arr,
+  sinDuplicados: arr.filter((value, index, self) => self.indexOf(value) === index)
+ }); */
+ return console.info({
+  original: arr,
+  sinDuplicados: [...new Set(arr)]
+ });
+}
+
+//quitarDuplicados(["x", 10, "x", 2, "10", 10, true, true])
+
 // 26) Programa una función que dado un arreglo de números obtenga el promedio, pe. promedio([9,8,7,6,5,4,3,2,1,0]) devolverá 4.5.
+
+const promedio = (arr = undefined) => {
+ if(arr === undefined) return console.warn("No ingresaste un arreglo de numeros");
+
+if(!(arr instanceof Array)) return console.error("El valor que ingresaste no es un arreglo");
+
+if(arr.length === 0) return console.error("El arreglo esta vacio");
+
+for (let num of arr) {
+ if(typeof num !== "number") return console.error(`El valor ${num} ingresado no es un numero`);  
+}
+
+return console.info(
+ arr.reduce((total, num, index, arr) =>{
+  total += num;
+  if(index === arr.length-1){
+   return `El promedio de ${arr.join("+")} es ${total/arr.length}`;
+  }else{
+   return total;
+  }
+ })
+ )
+}
+
+//promedio([9,8,7,6,5,4,3,2,1,0]);
+
+//Ultimo Ejercicio
+
+class Pelicula{
+ constructor ({id, titulo, director, estreno, pais, generos, calificacion}){
+  this.id = id;
+  this.titulo = titulo;
+  this.director = director;
+  this.estreno = estreno;
+  this.pais = pais;
+  this.generos = generos;
+  this.calificacion = calificacion;
+
+  this.valiarIMDB(id);
+ }
+
+ validarCadena(propiedad, valor){
+   if(!valor) return console.warn(`${propiedad} "${valor}" esta vacio`);
+
+   if(typeof valor != "string") return console.error(`${propiedad} "${valor}" ingresado, NO es una cadena de texto`);
+   return true;
+ }
+ valiarIMDB(id){
+  if(this.validarCadena("IMDB id", id)){
+   if(/^([a-z]){2}([0-9]){7}$/.test(id))
+    return console.error(`IMDB id "${id}" no es valido, debe tener 9 caracteres, las 2 primeras letras minusculas, los 7 restantes numeros`);
+   }
+ }
+
+}
+
+const peli = new Pelicula({
+
+})
+
  </script>
 </body>
 </html>
