--- a/ClaseDespuesDeEjercicios1/asincronia.html
+++ b/ClaseDespuesDeEjercicios1/asincronia.html
@@ -81,7 +81,30 @@
 
    })(); */
 
- 
+ function cuadradoCallback(value, callback){
+  setTimeout(() => {
+   callback(value, value*value);
+  }, 0|Math.random()*1000);
+ }
+ cuadradoCallback(0, (value, result)=>{
+  console.log("inicia callback");
+  console.log(`Callback: ${value}, ${result}`);
+  cuadradoCallback(1, (value, result)=>{
+   console.log(`Callback: ${value}, ${result}`);
+   cuadradoCallback(2, (value, result)=>{
+    console.log(`Callback: ${value}, ${result}`);
+    cuadradoCallback(3, (value, result)=>{
+     console.log(`Callback: ${value}, ${result}`);
+     cuadradoCallback(4, (value, result)=>{
+      console.log(`Callback: ${value}, ${result}`);
+      cuadradoCallback(5, (value, result)=>{
+       console.log(`Callback: ${value}, ${result}`);
+      });
+     });
+    });
+   });
+  });
+ });
 
  </script>
 </body>
