--- a/ClaseDespuesDeEjercicios1/asincronia.html
+++ b/ClaseDespuesDeEjercicios1/asincronia.html
@@ -81,7 +81,7 @@
 
    })(); */
 
- function cuadradoCallback(value, callback){
+/*  function cuadradoCallback(value, callback){
   setTimeout(() => {
    callback(value, value*value);
   }, 0|Math.random()*1000);
@@ -104,7 +104,53 @@
     });
    });
   });
- });
+ }); */
+ 
+ function cuadradoPromise(value){
+  if(typeof value !== "number") {
+   return Promise.reject(`Error, el valor ${value} ingresado no es un numero`);
+  }
+
+  return new Promise((resolve, reject) => {
+   setTimeout(() => {
+    resolve({
+     value,
+     result: value * value
+    });
+   }, 0|Math.random()*1000);
+  });
+ }
+
+ cuadradoPromise(0)
+  .then(obj => {
+   console.log('inicio Promise');
+   console.log(`Promise: ${obj.value}, ${obj.result}`);
+   return cuadradoPromise(1);
+  })
+  .then(obj => {
+   console.log(`Promise: ${obj.value}, ${obj.result}`);
+   return cuadradoPromise(2);
+  })
+  .then(obj => {
+   console.log(`Promise: ${obj.value}, ${obj.result}`);
+   return cuadradoPromise(3);
+  })
+  .then(obj => {
+   console.log(`Promise: ${obj.value}, ${obj.result}`);
+   return cuadradoPromise(4);
+  })
+  .then(obj => {
+   console.log(`Promise: ${obj.value}, ${obj.result}`);
+   return cuadradoPromise(5);
+  })
+  .then(obj => {
+   console.log(`Promise: ${obj.value}, ${obj.result}`);
+   console.log('Fin de la promesa');
+  })
+  
+  .catch(err => console.error(err));
+
+
 
  </script>
 </body>
