--- a/ClaseDespuesDeEjercicios1/asincronia.html
+++ b/ClaseDespuesDeEjercicios1/asincronia.html
@@ -106,7 +106,7 @@
   });
  }); */
  
- function cuadradoPromise(value){
+/*  function cuadradoPromise(value){
   if(typeof value !== "number") {
    return Promise.reject(`Error, el valor ${value} ingresado no es un numero`);
   }
@@ -148,8 +148,70 @@
    console.log('Fin de la promesa');
   })
   
-  .catch(err => console.error(err));
+  .catch(err => console.error(err)); */
 
+  function cuadradoPromise(value){
+  if(typeof value !== "number") {
+   return Promise.reject(`Error, el valor ${value} ingresado no es un numero`);
+  }
+
+  return new Promise((resolve, reject) => {
+   setTimeout(() => {
+    resolve({
+     value,
+     result: value * value
+    });
+   }, 0|Math.random()*1000);
+  });
+  }
+
+  async function funcionAsincronaDeclarada(){
+   try {
+    console.log("inicio async function");
+    let obj = await cuadradoPromise(0);
+    console.log(`Async Functions: ${obj.value}, ${obj.result}`);
+
+    obj = await cuadradoPromise(1);
+    console.log(`Async Functions: ${obj.value}, ${obj.result}`);
+    obj = await cuadradoPromise(2);
+    console.log(`Async Functions: ${obj.value}, ${obj.result}`);
+    obj = await cuadradoPromise(3);
+    console.log(`Async Functions: ${obj.value}, ${obj.result}`);
+    obj = await cuadradoPromise(4);
+    console.log(`Async Functions: ${obj.value}, ${obj.result}`);
+    obj = await cuadradoPromise(5);
+    console.log(`Async Functions: ${obj.value}, ${obj.result}`);
+
+    console.log('Fin async Function')
+   } catch (err) {
+    console.error(err);
+   }
+  }
+
+  funcionAsincronaDeclarada();
+
+  const funcionAsincronaExpresada = async () =>{
+   try {
+    console.log("inicio async function");
+    let obj = await cuadradoPromise(6);
+    console.log(`Async Functions: ${obj.value}, ${obj.result}`);
+
+    obj = await cuadradoPromise(7);
+    console.log(`Async Functions: ${obj.value}, ${obj.result}`);
+    obj = await cuadradoPromise(8);
+    console.log(`Async Functions: ${obj.value}, ${obj.result}`);
+    obj = await cuadradoPromise(9);
+    console.log(`Async Functions: ${obj.value}, ${obj.result}`);
+    obj = await cuadradoPromise(10);
+    console.log(`Async Functions: ${obj.value}, ${obj.result}`);
+
+    console.log('Fin async Function')
+   } catch (err) {
+    console.error(err);
+   }
+  }
+  
+  funcionAsincronaExpresada();
 
 
  </script>
