Clase 49 JS Symbols

--- a/ClaseDespuesDeEjercicios1/asincronia.html
+++ b/ClaseDespuesDeEjercicios1/asincronia.html
@@ -150,7 +150,7 @@
   
   .catch(err => console.error(err)); */
 
-  function cuadradoPromise(value){
+/*   function cuadradoPromise(value){
   if(typeof value !== "number") {
    return Promise.reject(`Error, el valor ${value} ingresado no es un numero`);
   }
@@ -211,7 +211,7 @@
    }
   }
   
-  funcionAsincronaExpresada();
+  funcionAsincronaExpresada(); */
 
 
  </script>
