Clase 51 JS Maps

--- a/ClaseDespuesDeEjercicios1/nuevosTiposDatos.html
+++ b/ClaseDespuesDeEjercicios1/nuevosTiposDatos.html
@@ -45,7 +45,7 @@
 
   console.log(Object.getOwnPropertySymbols(persona)); */
 
-  const set = new Set([1,2,3,3,4,5,true,false,true,{},{},"hola","HOLA"]);
+  /* const set = new Set([1,2,3,3,4,5,true,false,true,{},{},"hola","HOLA"]);
   console.log(set);
   console.log(set.size);
 
@@ -80,7 +80,46 @@
   console.log(set.has("hola"));
 
   set2.clear();
-  console.log(set2);
+  console.log(set2); */
+
+
+  const mapa = new Map();
+  mapa.set("nombre", "set");
+  mapa.set("apellido","Reyes");
+  mapa.set("edad", 23);
+
+  console.log(mapa);
+  console.log(mapa.size);
+  console.log(mapa.has("nombre"));
+  console.log(mapa.get("nombre"));
+  mapa.set("nombre", "Juan Jose");
+  console.log(mapa.get("nombre"));
+  mapa.delete("apellido");
+  console.log(mapa);
+
+  mapa.set(19,"diecinueve");
+  mapa.set(false, "falso");
+  mapa.set({},{});
+  console.log(mapa);
+
+  for(let [key, value] of mapa){
+   console.log(`Llave: ${key}, Valor: ${value}`);
+  }
+
+  const mapa2 = new Map([
+   ["nombre","KaLa"],
+   ["edad", 7],
+   ["animal", "perro"],
+   [null, "nulo"]
+  ]);
+
+  console.log(mapa2);
+
+  const llavesMapa2 = [...mapa2.keys()];
+  const valoresMapa2 = [...mapa2.values()];
+
+  console.log(llavesMapa2);
+  console.log(valoresMapa2);
 
  </script>
 </body>
