Clase 52 JS WeakSet & WeakMaps

--- a/ClaseDespuesDeEjercicios1/nuevosTiposDatos.html
+++ b/ClaseDespuesDeEjercicios1/nuevosTiposDatos.html
@@ -83,7 +83,7 @@
   console.log(set2); */
 
 
-  const mapa = new Map();
+  /* const mapa = new Map();
   mapa.set("nombre", "set");
   mapa.set("apellido","Reyes");
   mapa.set("edad", 23);
@@ -119,7 +119,79 @@
   const valoresMapa2 = [...mapa2.values()];
 
   console.log(llavesMapa2);
-  console.log(valoresMapa2);
+  console.log(valoresMapa2); */
+
+  //const ws = new WeakSet([1,2,3,3,4,5,true,false,false,{},{},"hola","hOla"]);
+/*   const ws = new WeakSet();
+
+  let valor1 = {"valor1": 1};
+  let valor2 = {"valor2": 2};
+  let valor3 = {"valor3": 3}; 
+
+  ws.add(valor1);
+  ws.add(valor2);
+  
+  console.log(ws);
+
+  console.log(ws.has(valor1));
+  console.log(ws.has(valor3));
+
+  ws.delete(valor2);
+  console.log(ws);
+
+  ws.add(valor2);
+  ws.add(valor3);
+  console.log(ws);
+
+  setInterval(() => console.log(ws), 1000);
+
+  setTimeout(() => {
+   valor1 = null;
+   valor2 = null;
+   valor3 =  null;
+  }, 5000);*/
+
+/*   const wm = new WeakMap([
+   ["nombre", "KaLa"],
+   ["edad", 7],
+   ["animal", "perro"],
+   [null, "nulo"]
+ ]); */
+
+/*   const wm = new WeakMap();
+  let llave1 = {};
+  let llave2 = {};
+  let llave3 = {};
+
+  wm.set(llave1, 1);
+  wm.set(llave2, 2);
+  console.log(wm);
+
+  console.log(wm.has(llave1));
+  console.log(wm.has(llave3));
+
+  console.log(wm.get(llave1));
+  console.log(wm.get(llave2));
+  console.log(wm.get(llave3));
+
+  wm.delete(llave2);
+  console.log(wm);
+
+  wm.set(llave2, 2);
+  wm.set(llave3, 3);
+  console.log(wm);
+
+  setInterval(() => console.log(wm), 1000);
+
+  setTimeout(() => {
+   llave1 = null;
+   llave2 = null;
+   llave3 = null;
+  }, 5000); */
+
+
+
+
 
  </script>
 </body>
