Class 53 JS Iterable & Iterators

--- a/ClaseDespuesDeEjercicios1/nuevosTiposDatos.html
+++ b/ClaseDespuesDeEjercicios1/nuevosTiposDatos.html
@@ -190,6 +190,25 @@
   }, 5000); */
 
 
+  const iterable = new Set([1,2,3,3,3,4,5,6,6]);
+
+  //Accedemos al iterador del iterable
+  const iterador = iterable[Symbol.iterator]();
+
+  console.log(iterable);
+  console.log(iterador);
+
+  // console.log(iterador.next());
+  // console.log(iterador.next());
+  // console.log(iterador.next());
+  // console.log(iterador.next());
+
+  let next = iterador.next();
+
+  while(!next.done){
+   console.log(next.value);
+   next = iterador.next();
+  }
 
 
 
