--- a/ClaseDespuesDeEjercicios1/nuevosTiposDatos.html
+++ b/ClaseDespuesDeEjercicios1/nuevosTiposDatos.html
@@ -190,26 +190,72 @@
   }, 5000); */
 
 
-  const iterable = new Set([1,2,3,3,3,4,5,6,6]);
+  // const iterable = new Set([1,2,3,3,3,4,5,6,6]);
 
-  //Accedemos al iterador del iterable
-  const iterador = iterable[Symbol.iterator]();
+  // //Accedemos al iterador del iterable
+  // const iterador = iterable[Symbol.iterator]();
 
-  console.log(iterable);
-  console.log(iterador);
+  // console.log(iterable);
+  // console.log(iterador);
 
   // console.log(iterador.next());
   // console.log(iterador.next());
   // console.log(iterador.next());
   // console.log(iterador.next());
 
-  let next = iterador.next();
+  // let next = iterador.next();
 
-  while(!next.done){
-   console.log(next.value);
-   next = iterador.next();
+  // while(!next.done){
+  //  console.log(next.value);
+  //  next = iterador.next();
+  // }
+
+  function* iterable(){
+   yield "hola";
+   console.log("Hola consola");
+   yield "hola2";
+   console.log("seguimos con mas instrucciones de nuestro codigo");
+   yield "hola3";
+   yield "hola4";
   }
 
+  let iterador = iterable();
+  /* console.log(iterador.next());
+  console.log(iterador.next());
+  console.log(iterador.next());
+  console.log(iterador.next());
+  console.log(iterador.next());
+  console.log(iterador.next()); */
+
+  for (let y of iterador) {
+   console.log(y);
+  }
+
+  const arr = [...iterable()];
+  console.log(arr);
+
+  function cuadrado(valor){
+   setTimeout(() => {
+    return console.log({valor, resultado: valor*valor})
+   }, Math.random()*1000);
+  }
+
+  function* generador(){
+   console.log("inicia generator");
+   yield cuadrado(0);
+   yield cuadrado(1);
+   yield cuadrado(2);
+   yield cuadrado(3);
+   yield cuadrado(4);
+   yield cuadrado(5);
+   console.log("Termina generator");
+  }
+
+  let gen = generador();
+
+  for(let y of gen){
+   console.log(y);
+  }
 
 
  </script>
