--- a/DOM/dom.html
+++ b/DOM/dom.html
@@ -26,7 +26,14 @@
     <li>etc</li>
   </ul>
   <script>
-    
+    console.log(window)
+    console.log(document)
+
+    let texto = "Hola soy tu amigo y docente digital Set Mircha";
+    const hablar = (texto) => speechSynthesis.speak(new SpeechSynthesisUtterance(texto));
+
+    hablar(texto);
+
   </script>
 </body>
 </html>
