--- a/DOM/html/dom.html
+++ b/DOM/html/dom.html
@@ -25,15 +25,6 @@
     <li>MatchMedia</li>
     <li>etc</li>
   </ul>
-  <script>
-    console.log(window)
-    console.log(document)
-
-    let texto = "Hola soy tu amigo y docente digital Set Mircha";
-    const hablar = (texto) => speechSynthesis.speak(new SpeechSynthesisUtterance(texto));
-
-    hablar(texto);
-
-  </script>
+  <script src="../js/dom.js"></script>
 </body>
 </html>
