--- a/DOM/html/dom.html
+++ b/DOM/html/dom.html
@@ -25,6 +25,44 @@
     <li>MatchMedia</li>
     <li>etc</li>
   </ul>
+  <br>
+  <hr>
+  <br>
+  <h3>Manejo del DOM</h3>
+  <p id="que-es">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos, porro explicabo suscipit, nesciunt sint culpa quisquam perferendis, harum nulla necessitatibus libero magnam dolore consequatur obcaecati nostrum cupiditate quae itaque error.</p>
+  <nav id="menu">
+    <ul>
+      <li><a href="#">Seccion 1</a></li>
+      <li><a href="#">Seccion 2</a></li>
+      <li><a href="#">Seccion 3</a></li>
+      <li><a href="#">Seccion 4</a></li>
+      <li><a href="#">Seccion 5</a></li>
+    </ul>
+  </nav>
+  <input type="text" name="nombre" placeholder="Nombre">
+  <a class="link-dom" href="dom.html">DOM</a>
+  <section class="cards">
+    <figure class="card">
+      <img src="https://placeimg.com/200/200/tech" alt="Tech">
+      <figcaption>Tech</figcaption>
+    </figure>
+    <figure class="card">
+      <img src="https://placeimg.com/200/200/animals" alt="Animals">
+      <figcaption>Animals</figcaption>
+    </figure>
+    <figure class="card">
+      <img src="https://placeimg.com/200/200/people" alt="People">
+      <figcaption>People</figcaption>
+    </figure>
+    <figure class="card">
+      <img src="https://placeimg.com/200/200/arch" alt="Arch">
+      <figcaption>Arch</figcaption>
+    </figure>
+    <figure class="card">
+      <img src="https://placeimg.com/200/200/nature" alt="Nature">
+      <figcaption>Nature</figcaption>
+    </figure>
+  </section>
   <script src="../js/dom.js"></script>
 </body>
 </html>
