--- a/DOM/html/dom.html
+++ b/DOM/html/dom.html
@@ -40,7 +40,7 @@
     </ul>
   </nav>
   <input type="text" name="nombre" placeholder="Nombre">
-  <a class="link-dom" href="dom.html">DOM</a>
+  <a class="link-dom" href="dom.html" data-description="Document Object Model" data-id="1">DOM</a>
   <section class="cards">
     <figure class="card">
       <img src="https://placeimg.com/200/200/tech" alt="Tech">
