Clase 72 JS Manejadores de Eventos

--- a/DOM/html/dom.html
+++ b/DOM/html/dom.html
@@ -102,6 +102,13 @@
       <figcaption></figcaption>
     </figure>
   </template>
+  <h3>Enventos en JS</h3>
+  <h4>Manejadores de Eventos</h4>
+  <button onclick="holaMundo()">Evento con Atributo HTML</button>
+  <br><br>
+  <button id="evento-semantico">Evento con Manejador Semantico</button>
+  <br><br>
+  <button id="evento-multiple">Evento con Manejador Multiple</button>
   <script src="../js/dom.js"></script>
 </body>
 </html>
