Clase 73 JS DOM

--- a/DOM/html/dom.html
+++ b/DOM/html/dom.html
@@ -109,6 +109,26 @@
   <button id="evento-semantico">Evento con Manejador Semantico</button>
   <br><br>
   <button id="evento-multiple">Evento con Manejador Multiple</button>
+  <br><br>
+  <button id="evento-remover">Removiendo eventos con manejadores multiples</button>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
   <script src="../js/dom.js"></script>
 </body>
 </html>
