--- a/DOM/html/dom.html
+++ b/DOM/html/dom.html
@@ -37,6 +37,20 @@
     .sepia{
       filter: sepia(1);
     }
+    .eventos-flujo div{
+      padding: 4rem;
+      font-size: 2rem;
+      text-align: center;
+    }
+    .uno{
+      background-color: yellow;
+    }
+    .dos{
+      background-color: gold;
+    }
+    .tres{
+      background-color: lightyellow;
+    }
   </style>
 </head>
 <body>
@@ -113,6 +127,18 @@
   <button id="evento-remover">Removiendo eventos con manejadores multiples</button>
   <br>
   <br>
+  <h4>Flujo de los Eventos</h4>
+  <section class="eventos-flujo">
+    <div class="uno">
+      1
+      <div class="dos">
+        2
+        <div class="tres">
+          3
+        </div>
+      </div>
+    </div>
+  </section>
   <br>
   <br>
   <br>
