Clase 76 JS DOM

--- a/DOM/html/dom.html
+++ b/DOM/html/dom.html
@@ -135,6 +135,7 @@
         2
         <div class="tres">
           3
+          <a href="http://jonmircha.com/" target="_blank" rel="noopener">ElJonMircha.com</a>
         </div>
       </div>
     </div>
