--- a/DOM/html/dom.html
+++ b/DOM/html/dom.html
@@ -143,6 +143,11 @@
   <br>
   <br>
   <h3 style="width: 2000px;">Manejo del BOM</h3>
+  <button id="abrir-ventana">Abrir Ventana</button>
+  <br><br>
+  <button id="cerrar-ventana">Cerrar Ventana</button>
+  <br><br>
+  <button id="imprimir-ventana">Imprimir Ventana</button>
   <br>
   <br>
   <br>
