--- a/DOM/Ejercicios/Ejercicio1.html
+++ b/DOM/Ejercicios/Ejercicio1.html
@@ -19,7 +19,7 @@
   </button>
   <aside class="panel">
     <nav class="menu">
-      <a href="#seccion1">Seccion 1</a>
+      <a href="#seccion1">Reloj Digital y Alarma Sonora</a>
       <a href="#seccion2">Seccion 2</a>
       <a href="#seccion3">Seccion 3</a>
       <a href="#seccion4">Seccion 4</a>
@@ -28,10 +28,17 @@
   </aside>
   <main>
     <seccion id="seccion1" class="section">
-      <h2>seccion 1</h2>
+      <h2>Reloj Digital y Alarma Sonora</h2>
+      <div id="reloj"></div>
+      <div>
+        <button id="activar-reloj">Iniciar Reloj</button>
+        <button id="desactivar-reloj">Detener Reloj</button>
+        <button id="activar-alarma">Iniciar Alarma</button>
+        <button id="desactivar-alarma">Detener Alarma</button>
+      </div>
     </seccion>
     <seccion id="seccion2" class="section">
-      <h2>seccion 2</h2>
+      <h2>Eventos del Teclado </h2>
     </seccion>
     <seccion id="seccion3" class="section">
       <h2>seccion 3</h2>
